# paraview-trame-components

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: create_release.yaml  publish_release.yml  quality_control.yaml  release.yml
examples/: all.py  color-opacity-editor.py  cone-with-slider.py  cone.py  dockable-views.py  file-open-picking.py  multi-views.py  open-file-button.py  open-file.py  pipeline.py  proxy-editor.py  pv-lite.py  reset-camera-example.py  reset-camera-example_vue2.py  selection.py  state-loader-slider.py  state-loader.py  table-view.py  test-cols.py  time-control.py  transform-editor.py  wavelet-contour-state.py
examples/jupyter/: README.md  lite.ipynb  simple.ipynb
examples/vue2/: reset-camera-example.py
ptc/: __init__.py  cli.py  color_opacity_editor.py  colors.py  core.py  dockable_views.py  file.py  filters.py  hover.py  multiblock.py  palette.py  pipeline.py  representation.py  reset_camera_button.py  time_control.py  toolbar.py  transform_editor.py  utils.py  vcr.py  vuetify.py
ptc/apps/: demo.py  lite.py  sphere.py  state_loader.py
ptc/assets/: __init__.py
ptc/assets/http/: style.css
ptc/layouts/: __init__.py  col.py  factory.py  side.py
ptc/proxy_editor/: __init__.py  core.py  info.py  plane.py  yaml_editor.py
ptc/views/: table.py
ptc/vue2/: __init__.py  palette.py  reset_camera_button.py
