[project]
name = "paraview-trame-components"
version = "0.13.2"
requires-python = ">= 3.10"
dependencies = [
  "pyyaml",
  "trame",
  "trame-vtk",
  "trame-vuetify",
  "trame-components",
]

authors = [
  {name = "Sebastien Jourdain", email = "sebastien.jourdain@kitware.com"},
]
maintainers = [
  {name = "Sebastien Jourdain", email = "sebastien.jourdain@kitware.com"},
]
description = "Macro components for ParaView"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["paraview", "web", "trame", "components"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "python-semantic-release",
  "pre-commit",
]
ci = [
  "build",
  "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "ptc/assets/http/*.css",
]

[tool.hatch.build.targets.wheel]
packages = ["ptc"]
artifacts = [
  "ptc/**/*.svg",
  "ptc/**/*.png",
  "ptc/**/*.css",
  "ptc/assets/http/*.css",
]

[project.scripts]
semantic-release = "semantic_release.cli:main"

# -----------------------------------------------------------------------------
# Code quality: Ruff, Codespell
# -----------------------------------------------------------------------------

[tool.ruff]
include = ["pyproject.toml", "ptc/**/*.py", "examples/**/*.py"]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = [
  # ok
  "C408",
  "PLR2004",
  "SIM117",
  
  # need cleanup
  "ARG001",
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  "D211",
  "D212",
  "E501",
  "FBT002",
  "FBT003",
  "ISC001",
  "N816",
  "SLF001",
]

[tool.ruff.lint.per-file-ignores]
"examples/wavelet*.py" = ["F403", "F405"]
"examples/*.py" = [
  "INP001",
  "I001", 
  "F401", 
  "E402", 
  "ANN001", "ANN003",
  "T201",
  "ERA001",
  "SIM117",
]


# -----------------------------------------------------------------------------

[tool.codespell]
skip = "**/package-lock.json,PKG-INFO,**/dist/**,CHANGELOG.md"

# -----------------------------------------------------------------------------
# Semantic release
# -----------------------------------------------------------------------------

[tool.semantic_release]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"
version_variables = [
    "ptc/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip
  python -m pip install ".[ci]"
  python -m build .
  pre-commit install
"""

[tool.semantic_release.branches.main]
match = "(release)"
prerelease_token = "rc"
prerelease = false

[semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
